started massScan function